# dwasi2

./: .gitignore  Cargo.toml  README.md  index.html  index.js  package.json  web.config  webpack.config.js
src/: common_funcs.rs  gl_setup.rs  lib.rs
src/programs/: color_2d.rs  mod.rs
src/shaders/: mod.rs
src/shaders/fragment/: color_2d.rs
src/shaders/vertex/: color_2d.rs  mod.rs
